--- a/src/views/edit.pug
+++ b/src/views/edit.pug
@@ -1,4 +1,7 @@
 extends base
 
 block content
-    h1 Edit Video
+    h4 Change Title of video
+    form(action="")
+        input(placeholder="Video title", value=video.title, required)
+        input(type="submit", value="Save")
