--- a/src/views/edit.pug
+++ b/src/views/edit.pug
@@ -2,6 +2,6 @@ extends base
 
 block content
     h4 Change Title of video
-    form(action="")
-        input(placeholder="Video title", value=video.title, required)
+    form(method="POST")
+        input(name="title" placeholder="Video title", value=video.title, required)
         input(type="submit", value="Save")
