--- a/src/views/base.pug
+++ b/src/views/base.pug
@@ -9,13 +9,15 @@ html(lang="en")
             nav 
                 ul
                     li
-                        a(href="/videos/upload") Upload Video
-                    li
                         a(href="/") Home
+                    li
+                        a(href="/videos/upload") Upload Video
                     li
                         a(href="/search") Search
                     li
                         a(href="/join") Join
+                    li
+                        a(href="/login") Login
         main
             block content
     include partials/footer
