--- a/src/views/login.pug
+++ b/src/views/login.pug
@@ -7,6 +7,8 @@ block content
         input(placeholder="Username", name="username", type="text", required )
         input(placeholder="Password", name="password", type="password", required )
         input(type="submit", value="Login")
+        br
+        a(href="https://github.com/login/oauth/authorize?client_id=6d1a10a4f743d33ddc2b&allow_signup=false") Continue with Github &rarr;
     hr
     div
         span Don't have an account? 
