--- a/src/views/edit.pug
+++ b/src/views/edit.pug
@@ -3,7 +3,7 @@ extends base
 block content
     h4 Update Video
     form(method="POST")
-        input(name="title" placeholder="Video title", value=video.title, required)
-        input(placeholder="Description", required, type="text", name="description", minlength=20, value=video.description)
-        input(placeholder="Hashtags, separated by comma.", required, type="text", name="hashtags", value=video.hashtags.join())
+        input(name="title", placeholder="Video title", required, value=video.title)
+        input(name="description", placeholder="Description", required, type="text",  minlength=20, value=video.description)
+        input(name="hashtags", placeholder="Hashtags, separated by comma.", required, type="text",  value=video.hashtags.join())
         input(type="submit", value="Save")
