--- a/src/views/upload.pug
+++ b/src/views/upload.pug
@@ -8,3 +8,5 @@ block content
         input(placeholder="Description(min_20)", required, type="text", name="description", minlength=20)
         input(placeholder="Hashtags, separated by comma.", required, type="text", name="hashtags")
         input(type="submit", value="Upload Video")
+
+        //- videoController에서 req.body를 사용하기 위해 input값에 name을 설정해준다.
