--- a/src/views/edit.pug
+++ b/src/views/edit.pug
@@ -5,5 +5,6 @@ block content
     form(method="POST")
         input(name="title", placeholder="Video title", required, value=video.title)
         input(name="description", placeholder="Description", required, type="text",  minlength=20, value=video.description)
+        //- value=video.hashtags.join() --> join()은 array를 string으로 보여지게 해준다.
         input(name="hashtags", placeholder="Hashtags, separated by comma.", required, type="text",  value=video.hashtags.join())
         input(type="submit", value="Save")
