--- a/src/views/base.pug
+++ b/src/views/base.pug
@@ -1,6 +1,9 @@
 doctype html
 html(lang="en")
     head
+        meta(charset="UTF-8")
+        meta(http-equiv="X-UA-Compatible", content="IE=edge")
+        meta(name="viewport", content="width=device-width, initial-scale=1.0")
         title #{pageTitle} | #{siteName}
         link(rel="stylesheet", href="https://unpkg.com/mvp.css")
     body
@@ -12,6 +15,10 @@ html(lang="en")
                         a(href="/") Home
                     if loggedIn
                         li
+                            a(href="/videos/upload") Upload Video
+                        li
+                            a(href=`/users/${loggedInUser._id}`) #{loggedInUser.username}'s Profile
+                        li
                             a(href="/users/edit") Edit Profile
                         li
                             a(href="/users/logout") Log out
@@ -22,8 +29,6 @@ html(lang="en")
                             a(href="/login") Login
                     li
                         a(href="/search") Search
-                    li
-                        a(href="/videos/upload") Upload Video
         main
             block content
     include partials/footer
