--- a/src/views/home.pug
+++ b/src/views/home.pug
@@ -3,7 +3,8 @@ include mixins/video
 
 block content
     //videos는 controller에 있는 변수와 이름이 같아야함 potato는 videos의 각각의 item일뿐
-    each potato in videos
-        +video(potato)
-    else
-        li Sorry nothing found.
+    div.video-grid
+        each video in videos
+            +video(video)
+        else
+            span.empty__message No videos found
