--- a/src/views/base.pug
+++ b/src/views/base.pug
@@ -1,3 +1,5 @@
+include mixins/message
+
 doctype html
 html(lang="en")
     head
@@ -5,30 +7,18 @@ html(lang="en")
         meta(http-equiv="X-UA-Compatible", content="IE=edge")
         meta(name="viewport", content="width=device-width, initial-scale=1.0")
         title #{pageTitle} | #{siteName}
-        link(rel="stylesheet", href="https://unpkg.com/mvp.css")
+        link(rel="stylesheet", href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css")
+        link(rel="stylesheet", href="/static/css/styles.css")
     body
-        header
-            h1=pageTitle
-            nav 
-                ul
-                    li
-                        a(href="/") Home
-                    if loggedIn
-                        li
-                            a(href="/videos/upload") Upload Video
-                        li
-                            a(href=`/users/${loggedInUser._id}`) #{loggedInUser.username}'s Profile
-                        li
-                            a(href="/users/edit") Edit Profile
-                        li
-                            a(href="/users/logout") Log out
-                    else
-                        li
-                            a(href="/join") Join
-                        li
-                            a(href="/login") Login
-                    li
-                        a(href="/search") Search
+        if messages.error
+            +message("error", messages.error)
+        if messages.info
+            +message("info", messages.info)
+        if messages.success
+            +message("success", message.success)
+        include partials/header
         main
             block content
-    include partials/footer
+        include partials/footer
+    script(src="/static/js/main.js") 
+    block scripts
