--- a/src/views/upload.pug
+++ b/src/views/upload.pug
@@ -1,12 +1,23 @@
 extends base
 
 block content
+    div.upload__container
+        div.upload__video
+            video#preview
+            button#actionBtn Start Recording
     if errorMessage
         span=errorMessage
-    form(method="POST")
+    form(method="POST", enctype="multipart/form-data")
+        label(for="video") Video File
+        input(type="file", accept="video/*", required, id = "video", name="video")
+        label(for="thumb") Thumbnail File
+        input(type="file", accept="image/*", required, id = "thumb", name="thumb")
         input(placeholder="Title", required, type="text", name="title", maxlength=80)
-        input(placeholder="Description(min_20)", required, type="text", name="description", minlength=20)
+        input(placeholder="Description", required, type="text", name="description", minlength=2)
         input(placeholder="Hashtags, separated by comma.", required, type="text", name="hashtags")
         input(type="submit", value="Upload Video")
+
+block scripts
+    script(src="/static/js/recorder.js") 
 
         //- videoController에서 req.body를 사용하기 위해 input값에 name을 설정해준다.
