--- a/src/views/partials/header.pug
+++ b/src/views/partials/header.pug
@@ -19,10 +19,10 @@ header
                             span 😀
                         else
                             if loggedInUser.avatarUrl
-                                if loggedInUser.avatarUrl.includes("github")
+                                if loggedInUser.avatarUrl.includes("amazonaws")
                                     img.header__avatar(src=loggedInUser.avatarUrl)
                                 else 
-                                    img.header__avatar(src=loggedInUser.avatarUrl)
+                                    img.header__avatar(src= "/" + loggedInUser.avatarUrl)
             else
                 li
                     a(href="/login") Login
