--- a/src/views/partials/social-login.pug
+++ b/src/views/partials/social-login.pug
@@ -2,7 +2,7 @@ div.social-login
     a(href="/users/github/start").social__btn.social__btn--github
         i.fab.fa-github
         |  Continue with Github &rarr;
-//- br
-//- a(href="/users/kakao/start").social__btn.social__btn--kakao
-//-     i.fas.fa-comment
-//-     |  Continue with Kakao &rarr;
+    br
+    a(href="/users/kakao/start").social__btn.social__btn--kakao
+        i.fas.fa-comment
+        |  Continue with Kakao &rarr;
