--- a/src/client/scss/components/forms.scss
+++ b/src/client/scss/components/forms.scss
@@ -27,8 +27,8 @@ input[type="submit"],
 .social__btn {
   border-radius: 5px;
   padding: 12px 20px;
-  background-color: white !important;
-  color: rgba($color: $red, $alpha: 1) !important;
+  background-color: white;
+  color: rgba($color: $red, $alpha: 1);
   text-align: center !important;
   cursor: pointer;
   display: block;
