--- a/src/client/scss/components/social-login.scss
+++ b/src/client/scss/components/social-login.scss
@@ -2,8 +2,12 @@
   border-top: 1px solid rgba(255, 255, 255, 0.2);
   padding-top: 30px;
   margin-top: 30px;
+  .social__btn--kakao {
+    background-color: rgb(250, 225, 0);
+    color: rgb(60, 30, 30);
+  }
   .social__btn--github {
-    background-color: transparent;
+    background-color: rgb(44, 151, 75);
     color: azure;
   }
 }
