--- a/src/views/base.pug
+++ b/src/views/base.pug
@@ -7,6 +7,7 @@ html(lang="en")
         meta(http-equiv="X-UA-Compatible", content="IE=edge")
         meta(name="viewport", content="width=device-width, initial-scale=1.0")
         title #{pageTitle} | #{siteName}
+        link(rel="shortcut icon", href="https://www.youtube.com/s/desktop/e06db45c/img/favicon.ico")
         link(rel="stylesheet", href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css")
         link(rel="stylesheet", href="/static/css/styles.css")
     body
