--- a/src/views/mixins/video.pug
+++ b/src/views/mixins/video.pug
@@ -1,6 +1,6 @@
 mixin video(video)
     a(href=`/videos/${video.id}`).video-mixin
-        if video.thumbUrl.includes("amazonaws")
+        if video.thumbUrl.includes("http")
             div.video-mixin__thumb(style=`background-image:url(${video.thumbUrl});background-size:cover;background-position:center`)
         else
             div.video-mixin__thumb(style=`background-image:url(${"/" + video.thumbUrl});background-size:cover;background-position:center`)
