--- a/src/views/users/profile.pug
+++ b/src/views/users/profile.pug
@@ -3,10 +3,10 @@ include ../mixins/video
 
 block content
     div.profile__data
-        if user.avatarUrl.includes("amazonaws")
-            img(src=user.avatarUrl).avatar
+        if user.avatarUrl.includes("http")
+            img(src=user.avatarUrl, crossorigin).avatar
         else 
-            img(src= "/" + user.avatarUrl).avatar
+            img(src= "/" + user.avatarUrl, crossorigin).avatar
         h3=user.name
     div.video-grid
         each video in user.videos
