--- a/src/views/watch.pug
+++ b/src/views/watch.pug
@@ -2,7 +2,10 @@ extends base
 
 block content
     div#videoContainer(data-id=video.id)
-        video(src=video.fileUrl)
+        if video.fileUrl.includes("http")
+            video(src=video.fileUrl)
+        else
+            video(src ="/" + video.fileUrl)
         div#videoControls.videoControls
             div.videoControls__play
                 span#play.videoControls__playBtn
