--- a/src/views/watch.pug
+++ b/src/views/watch.pug
@@ -38,13 +38,14 @@ block content
                 button Add Comment
     div.video__comments
         ul
-            each comment in video.comments.reverse()
+            each comment in video.comments
                 li.video__comment(data-id=comment.id)
                     i.fas.fa-comment
                     span  #{comment.text}
                     if String(comment.owner._id) === String(loggedInUser._id)
-                        span#removeCommentBtn ❌
+                        span.remove__comment#removeCommentBtn ❌
 
 block scripts
     script(src="/static/js/videoPlayer.js")
-    script(src="/static/js/commentSection.js")
+    if loggedIn
+        script(src="/static/js/commentSection.js")
