--- a/src/client/scss/styles.scss
+++ b/src/client/scss/styles.scss
@@ -26,8 +26,8 @@ a {
 body {
   font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen,
     Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
-  // background-color: #fff;
-  // color: #000;
+  background-color: $bg;
+  color: #fff;
 }
 
 main {
@@ -66,13 +66,14 @@ main {
   }
 }
 
-.themeBtn__container {
-  text-align: center;
-  margin: 50px;
-  button {
-    font-size: 30px;
-    background-color: white;
-    border: none;
-    cursor: pointer;
-  }
-}
+// 다크모드 구현
+// .themeBtn__container {
+//   text-align: center;
+//   margin: 50px;
+//   button {
+//     font-size: 30px;
+//     background-color: white;
+//     border: none;
+//     cursor: pointer;
+//   }
+// }
