--- a/src/views/base.pug
+++ b/src/views/base.pug
@@ -20,9 +20,11 @@ html(lang="en")
         include partials/header
         main
             block content
-        div.themeBtn__container
-            button.themeBtn#themeBtn
-                i.far.fa-sun#themeIcon
         include partials/footer
     script(src="/static/js/main.js") 
     block scripts
+            
+        //- 다크모드 구현
+        //- div.themeBtn__container
+        //-     button.themeBtn#themeBtn
+        //-         i.far.fa-sun#themeIcon
