--- a/src/views/partials/header.pug
+++ b/src/views/partials/header.pug
@@ -20,7 +20,7 @@ header
                         else
                             if loggedInUser.avatarUrl
                                 if loggedInUser.avatarUrl.includes("http")
-                                    img.header__avatar(src=loggedInUser.avatarUrl, crossorigin)
+                                    img.header__avatar(src=loggedInUser.avatarUrl)
                                 else 
                                     img.header__avatar(src= "/" + loggedInUser.avatarUrl, crossorigin)
             else
