--- a/src/views/users/profile.pug
+++ b/src/views/users/profile.pug
@@ -4,7 +4,7 @@ include ../mixins/video
 block content
     div.profile__data
         if user.avatarUrl.includes("http")
-            img(src=user.avatarUrl, crossorigin).avatar
+            img(src=user.avatarUrl).avatar
         else 
             img(src= "/" + user.avatarUrl, crossorigin).avatar
         h3=user.name
