--- a/src/views/upload.pug
+++ b/src/views/upload.pug
@@ -1,10 +1,10 @@
 extends base
 
 block content
-    div.upload__container
-        div.upload__video
-            video#preview
-            button#actionBtn Start Recording
+    //- div.upload__container
+    //-     div.upload__video
+    //-         video#preview
+    //-         button#actionBtn Start Recording
     if errorMessage
         span=errorMessage
     form(method="POST", enctype="multipart/form-data")
