--- a/src/client/scss/components/video.scss
+++ b/src/client/scss/components/video.scss
@@ -1,21 +1,31 @@
 // video mixins
 .video-mixin {
   .video-mixin__thumb {
+    width: 100%;
     height: 140px;
     border-radius: 7px;
-    width: 100%;
-    background-color: ivory;
   }
   .video-mixin__data {
-    padding: 0px 15px;
-    .video-mixin__title {
-      font-size: 18px;
-      display: block;
-      margin-top: 10px;
+    padding: 10px 0px;
+    .video-mixin__avatar-title {
+      display: flex;
+      align-items: center;
+      .video-mixin__avatar img {
+        width: 40px;
+        height: 40px;
+        border-radius: 50%;
+      }
+      .video-mixin__title {
+        font-size: 14px;
+      }
     }
-    .video-mixin__meta {
-      margin-top: 5px;
-      font-size: 12px;
+    .video-mixin__user-data {
+      display: flex;
+      align-items: center;
+      margin-top: 10px;
+      .video-mixin__meta {
+        font-size: 12px;
+      }
     }
   }
 }
