--- a/src/views/mixins/video.pug
+++ b/src/views/mixins/video.pug
@@ -5,7 +5,14 @@ mixin video(video)
         else
             div.video-mixin__thumb(style=`background-image:url(${"/" + video.thumbUrl});background-size:cover;background-position:center`)
         div.video-mixin__data
-            span.video-mixin__title=video.title
-            div.video-mixin__meta
-                span #{video.owner.name} • 
-                span #{video.meta.views} 회
+            div.video-mixin__avatar-title
+                span.video-mixin__avatar
+                    if video.owner.avatarUrl.includes("http")
+                        img(src=video.owner.avatarUrl)
+                    else 
+                        img(src= "/" + video.owner.avatarUrl, crossorigin)
+                span.video-mixin__title=video.title
+            div.video-mixin__user-data
+                div.video-mixin__meta
+                    span #{video.owner.name} • 
+                    span #{video.meta.views} 회
