--- a/src/client/scss/components/video.scss
+++ b/src/client/scss/components/video.scss
@@ -16,6 +16,7 @@
         border-radius: 50%;
       }
       .video-mixin__title {
+        margin-left: 10px;
         font-size: 14px;
       }
     }
